0.8.0/_sources/developers_guide/ocean/generated/polaris.tasks.ocean.merry_go_round.analysis.Analysis.rst.txt
polaris.tasks.ocean.merry\_go\_round.analysis.Analysis
======================================================

.. currentmodule:: polaris.tasks.ocean.merry_go_round.analysis

.. autoclass:: Analysis

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~Analysis.__init__
      ~Analysis.add_dependency
      ~Analysis.add_input_file
      ~Analysis.add_output_file
      ~Analysis.compute_error
      ~Analysis.constrain_resources
      ~Analysis.convergence_parameters
      ~Analysis.exact_solution
      ~Analysis.get_output_field
      ~Analysis.map_from_native_model_vars
      ~Analysis.map_to_native_model_vars
      ~Analysis.open_model_dataset
      ~Analysis.plot_convergence
      ~Analysis.process_inputs_and_outputs
      ~Analysis.run
      ~Analysis.runtime_setup
      ~Analysis.set_resources
      ~Analysis.set_shared_config
      ~Analysis.setup
      ~Analysis.validate_baselines
      ~Analysis.write_model_dataset
   
   

   
   
   